Add um novo titulo

--- a/site_test/index.html
+++ b/site_test/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus quidem, voluptatum ea eum fuga aliquid sequi, sed tempore repellendus eius, eligendi quibusdam. Veniam optio quod sint numquam doloremque exercitationem autem!</p>
+    <hr>
+    <h2>TESTE</h2>
 </body>
 </html>
