--- a/Aprendendo_branch/index.html
+++ b/Aprendendo_branch/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header> <!-- cabeçalho -->
-            <h1>BRANCH</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTM5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus atque vel perspiciatis ipsam vero nisi nihil eligendi in nesciunt doloribus! Quas, aliquam cum! Quae temporibus odio laudantium ad ut dolores.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, alias distinctio debitis quos esse tenetur. Consequatur, nam accusamus exercitationem laborum corporis ipsa hic quos cupiditate praesentium atque enim placeat blanditiis.</p>
         </article>
     </main>
 </body>
