--- a/Aprendendo_branch/index.html
+++ b/Aprendendo_branch/index.html
@@ -11,6 +11,7 @@
     <main>
         <header> <!-- cabeçalho -->
             <h1>Cursos Grátis</h1>
+            <img src="h.jpg" alt="html icon">
         </header>
         <article>
             <h2>Curso de HTM5 com CSS3</h2>
