--- a/Aprendendo_branch/index.html
+++ b/Aprendendo_branch/index.html
@@ -11,14 +11,16 @@
     <main>
         <header> <!-- cabeçalho -->
             <h1>Cursos Grátis</h1>
-            <img src="h.jpg" alt="html icon">
+            <img src="Imagens/curso1.png" alt="html icon">
         </header>
         <article>
             <h2>Curso de HTM5 com CSS3</h2>
+            <img src="Imagens/curso2.png" alt="CSS">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus atque vel perspiciatis ipsam vero nisi nihil eligendi in nesciunt doloribus! Quas, aliquam cum! Quae temporibus odio laudantium ad ut dolores.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img src="Imagens/curso3.png" alt="Js">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, alias distinctio debitis quos esse tenetur. Consequatur, nam accusamus exercitationem laborum corporis ipsa hic quos cupiditate praesentium atque enim placeat blanditiis.</p>
         </article>
     </main>
