--- a/Aprendendo_branch/index.html
+++ b/Aprendendo_branch/index.html
@@ -11,17 +11,19 @@
     <main>
         <header> <!-- cabeçalho -->
             <h1>Cursos Grátis</h1>
-            <img src="Imagens/curso1.png" alt="html icon">
         </header>
         <article>
             <h2>Curso de HTM5 com CSS3</h2>
-            <img src="Imagens/curso2.png" alt="CSS">
+            <img class="flu" src="Imagens/curso2.png" alt="CSS">
+            <img class="flu" src="Imagens/curso1.png" alt="html icon">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus atque vel perspiciatis ipsam vero nisi nihil eligendi in nesciunt doloribus! Quas, aliquam cum! Quae temporibus odio laudantium ad ut dolores.</p>
+            <a href="curso.html"><p></p>Acesse o curso de HTML5+CSS3</p></a>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <img src="Imagens/curso3.png" alt="Js">
+            <img class="flu" src="Imagens/curso3.png" alt="Js">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, alias distinctio debitis quos esse tenetur. Consequatur, nam accusamus exercitationem laborum corporis ipsa hic quos cupiditate praesentium atque enim placeat blanditiis.</p>
+            <a href="curso2.html"><p>Acesse o curso de JavaScript</p></a>
         </article>
     </main>
 </body>
