--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <header> <!-- cabeçalho -->
-            <h1>Cursos Grátiss</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
             <h2>Curso de HTM5 com CSS3</h2>
